added a texture tool

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <h3>muTS demo powered by AMDModules</h3>
     <br>
-    <a href="vanilla.html">Go to VanillaJS version</a>
+    <a href="vanilla.html">Go to VanillaJS version</a><br>
+    <a href="textures.html">Go to Texture list tool</a>
     <hr>
     <input accept=".mu" type="file" id="fileInput">
     <br>
