--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h3>muTS demo powered by AMDModules</h3>
     <br>
     <a href="vanilla.html">Go to VanillaJS version</a><br>
-    <a href="textures.html">Go to Texture list tool</a>
+    <a href="textures.html">Go to Texture list tool</a><br>
+    <a href="animations.html">Go to Animation list tool</a>
     <hr>
     <input accept=".mu" type="file" id="fileInput">
     <br>
