--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h3>muTS demo powered by AMDModules</h3>
     <br>
     <a href="vanilla.html">Go to VanillaJS version</a><br>
+    Other tools build using muTS:<br>
+    I recommend using Google Chrome for bulk file processing. It's much faster.<br>
     <a href="textures.html">Go to Texture list tool</a><br>
     <a href="animations.html">Go to Animation list tool</a>
     <hr>
