added mu editor tool

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     Other tools build using muTS:<br>
     I recommend using Google Chrome for bulk file processing. It's much faster.<br>
     <a href="textures.html">Go to Texture list tool</a><br>
-    <a href="animations.html">Go to Animation list tool</a>
+    <a href="animations.html">Go to Animation list tool</a><br>
+    <a href="editor.html">Go to mu editor tool (Chromium browsers only)</a>
     <hr>
     <input accept=".mu" type="file" id="fileInput">
     <br>
